# musicd

./: .env.example  .gitignore  .prettierrc  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  rustfmt.toml  settings.example.json
.github/workflows/: ci.yml
src/: api.rs  cli.rs  job.rs  main.rs  notifier.rs  player.rs  playlist.rs  publisher.rs  settings.rs  state.rs
src/downloader/: mod.rs  yt_dlp.rs
src/utils/: hhmmss.rs
static/: index.html
static/css/: styles.css
static/js/: script.js  ws.js
