[package]
name = "musicd"
version = "0.1.2"
edition = "2024"
description = "Portable file-based headless music player daemon for devs"
keywords = ["cli", "music", "player", "audio", "daemon"]
categories = ["command-line-utilities", "multimedia"]
repository = "https://github.com/itsKaynine/musicd"
documentation = "https://github.com/itsKaynine/musicd"
authors = ["Punnawut Khowkittipaiboon <me@itskaynine.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "http2", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = "0.15.14"
crossbeam-channel = "0.5.15"
dotenvy = "0.15.7"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
hyper = "1"
mime = "0.3"
mime_guess = "2.0.5"
notify = "8.2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rodio = { version = "0.21", default-features = true, features = ["symphonia-all"] }
rust-embed = "8.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[package.metadata.release]
tag-name = "v{{version}}"
